--- a/.github/workflows/antlr.yml
+++ b/.github/workflows/antlr.yml
@@ -2,7 +2,9 @@ name: ANTLR
 
 on:
   workflow_dispatch:
-
+defaults:
+  run:
+    working-directory: antlr
 jobs:
   pip-install:
     runs-on: ubuntu-latest
@@ -13,10 +15,10 @@ jobs:
       with:
         python-version: "3.10"
     - name: Install ANTLR
-      run: pip install antlr4-tools
+      run: ./install-on-ubuntu.sh via-pip
   apt-install:
     runs-on: ubuntu-latest
     steps:
     - name: Install ANTLR
-      run: apt install -y antlr4
+      run: ./install-on-ubuntu.sh via-apt
    
