--- a/.github/workflows/antlr.yml
+++ b/.github/workflows/antlr.yml
@@ -19,6 +19,7 @@ jobs:
   apt-install:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3      
     - name: Install ANTLR
       run: ./install-on-ubuntu.sh via-apt
    
